@@ -1,3 +1,8 @@
+9 January 2014: Wouter
+	- Fix that bad IXFR updates do not result in double SOA records,
+	  and that an AXFR is started (attempted) when the zone state seems
+	  to be inconsistent with the master's zone state.
+
 8 January 2014: Matthijs
 	- Bugfix #542: Match RRSIG TTL with SOA TTL in negative response.
 
